--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: animated_splash_plus
 description: A highly customizable animated splash screen package for Flutter with beautiful sunset effects and text animations.
 version: 1.0.0
-homepage: https://github.com/yourusername/animated_splash_plus
+homepage: https://github.com/AAShayon/animated_splash_plus
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: '>=2.17.0 <4.0.0'
   flutter: ">=3.0.0"
 
 dependencies:
@@ -14,7 +14,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
